# LineSegmentDetector-SLAM

./: .gitignore  1.xls  DEG.xls  Disp.xls  LICENSE  LSD.sln  Lidar.txt  Odom.txt  RC.xls  README.md  RG.xls  data255.txt  mapParam.txt  mapValue.txt
Feature/: Feature.sln  Feature.vcxproj  main_feature.cpp
LSD/: FeatureAssociation.cpp  FeatureAssociation.h  LSD.vcxproj  baseFunc.cpp  baseFunc.h  main.cpp  main_no_disp.cpp  main_on_linux.cpp  main_on_windows.cpp  main_with_disp.cpp  myFA.cpp  myFA.h  myLSD.cpp  myLSD.h  myRDP.cpp  myRDP.h  test.cpp  threadpool.c  threadpool.h
ROS/lsd/: CMakeLists.txt  package.xml
ROS/lsd/include/: baseFunc.h  myLSD.h  myRDP.h
ROS/lsd/src/: FeatureAssociation.cpp  main_on_linux.cpp  main_on_windows.cpp  myRDP.cpp
data/: MaplineIm.txt  MaplinesInfo.txt  ScanlineIm.txt  ScanlinesInfo.txt  mapParam_aisle1.txt  mapParam_aisle2.txt  mapParam_map1.txt  mapValue.txt  mapValue_aisle1.txt  mapValue_aisle2.txt  mapValue_aisle3.txt  mapValue_map2.txt
data_20190513/data_f3key/data1/: Lidar.txt  mapParam.txt
data_20190513/data_f3key/data2/: Lidar.txt  (+3 more)
data_20190523/data/: Lidar.txt  Odom.txt  mapParam.txt  realPos.txt  realPosMCL.txt  recored_Odom.txt
data_20210209/3236/: mapParam.txt  mapValue.txt
data_20210223/210305/: mapParam.txt  mapValue.txt
data_20210223/3236/: mapParam.txt  mapValue.txt  realPos.txt  recored_Odom.txt
data_20210223/4876/: mapParam.txt  mapValue.txt
data_20210223/5980/: Odom.txt  mapParam.txt  mapValue.txt
data_20210223/6529/: mapParam.txt  mapValue.txt
data_20210223/8219/: mapParam.txt  mapValue.txt
(+71 files in other folders)
